--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
-#container{
-    color: red;
+#example-sqaure{
+    height: 200px;
+    width: 200px;
+    border-color: black;
+    background-color: rgb(226, 226, 226);
+    border-radius: 5px;
+    border-width: 5px;
+    border-style: solid;
 }
