--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,12 @@
-#example-sqaure{
-    height: 200px;
-    width: 200px;
+#container{
+    width:  800px;
+    height: 800px;
+}
+
+.sqaure{
+    height: 50px;
+    width: 50px;
     border-color: black;
     background-color: rgb(226, 226, 226);
-    border-radius: 5px;
-    border-width: 5px;
-    border-style: solid;
+    border: 3px solid red;
 }
