--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,15 @@
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #container{
     width:  800px;
     height: 800px;
     display: flex;
     flex-direction: column;
-}
+ }
 
 .row{
     flex: 1;
@@ -22,4 +28,15 @@
 
 .hover{
     background-color: red;
+}
+
+button{
+    background-color: bisque;
+    font-size: larger;
+    /* width: 100px;
+    height: 25px; */
+    border: 3px solid black;
+    border-radius: 5px;
+    margin-bottom: 50px;
+    margin: 10px;
 }
